added compose.yml